[tool.poetry]
name = "pyppl_echo"
version = "0.0.2"
description = "Echo script output to PyPPL logs"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyppl = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins.pyppl]
pyppl_echo = "pyppl_echo"
